--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "homepage": "https://github.com/EphraimDev/store-contacts#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.18.1",
     "config": "^3.2.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
